# StarEscrow

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
clients/cli/: Cargo.toml
clients/cli/src/: main.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: errors.rs  events.rs  lib.rs  reputation.rs  storage.rs  yield.rs
contracts/escrow/test_snapshots/: prop_approve_requires_work_submitted.1.json  prop_approve_requires_work_submitted.10.json  prop_approve_requires_work_submitted.100.json  prop_approve_requires_work_submitted.101.json  prop_approve_requires_work_submitted.102.json  prop_approve_requires_work_submitted.103.json  prop_approve_requires_work_submitted.104.json  prop_approve_requires_work_submitted.105.json  prop_approve_requires_work_submitted.106.json  prop_approve_requires_work_submitted.107.json  prop_approve_requires_work_submitted.108.json  prop_approve_requires_work_submitted.109.json  prop_approve_requires_work_submitted.11.json  prop_approve_requires_work_submitted.110.json  prop_approve_requires_work_submitted.111.json  prop_approve_requires_work_submitted.112.json  prop_approve_requires_work_submitted.113.json  prop_approve_requires_work_submitted.114.json  prop_approve_requires_work_submitted.115.json  prop_approve_requires_work_submitted.116.json  prop_approve_requires_work_submitted.117.json  prop_approve_requires_work_submitted.118.json  prop_approve_requires_work_submitted.119.json  prop_approve_requires_work_submitted.12.json  prop_approve_requires_work_submitted.120.json  prop_approve_requires_work_submitted.121.json  prop_approve_requires_work_submitted.122.json  prop_approve_requires_work_submitted.123.json  prop_approve_requires_work_submitted.124.json  prop_approve_requires_work_submitted.125.json  prop_approve_requires_work_submitted.126.json  prop_approve_requires_work_submitted.127.json  prop_approve_requires_work_submitted.128.json  prop_approve_requires_work_submitted.129.json  prop_approve_requires_work_submitted.13.json  prop_approve_requires_work_submitted.130.json  prop_approve_requires_work_submitted.131.json  prop_approve_requires_work_submitted.132.json  prop_approve_requires_work_submitted.133.json  prop_approve_requires_work_submitted.134.json  (+1259 more)
contracts/escrow/tests/: benchmarks.rs  escrow_tests.rs  multi_milestone.rs  prop_tests.rs
contracts/factory/src/: lib.rs
contracts/factory/tests/: factory_tests.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
contracts/reputation/tests/: reputation_tests.rs
docs/: BENCHMARKS.md  FAQ.md  GLOSSARY.md  PROTOCOL.md  ROADMAP.md
