[workspace]
members = [
    "contracts/escrow",
    "contracts/factory",
    "clients/cli",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# Separate profile used by `stellar contract build` / wasm-opt pipeline.
# Identical to release but named explicitly so CI can reference it.
[profile.contract-release]
inherits = "release"
